--- a/mongoexpress-deployment.yml
+++ b/mongoexpress-deployment.yml
@@ -35,3 +35,17 @@ spec:
             configMapKeyRef:
               name : mongo-configmap
               key : database-url
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongodb-express-service
+spec:
+  selector:
+    app: mongo-express
+  type: LoadBalancer
+  ports:
+    - protocol: TCP
+      port: 8081
+      targetPort: 8081
+      nodePort: 30008
